--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -12,12 +12,21 @@ body {
     margin: 0;
     /* background-color: #242324; */
     /* background-image: linear-gradient(315deg, #242324 20%, #4d4f50 54%, #b1b5b1 91%); */
-    background-color: #0093E9;
-    background-image: linear-gradient(315deg, #0093E9 0%, #80D0C7 100%);
-    height: 97vh;
-    width: 100%;
-    background-size: 100%;
+    /* height: 97vh;
+    width: 100%; */
+    background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+.morning {
+  background: linear-gradient(315deg, #0093E9 0%, #80D0C7 100%);
+}
+
+.night {
+  background: linear-gradient(315deg, #242324 20%, #4d4f50 100%);
+  /* background: linear-gradient(315deg, #090973 0%, #2E2157 100%); */
+  /* background: linear-gradient(315deg, #0093E9 0%, #80D0C7 100%); */
 }
 /*----Glass Effect----*/
 .glass-effect-container {
@@ -172,6 +181,9 @@ body {
   height: auto;
   object-fit: contain;
 }
+#temp-description{
+  font-size: 28px;
+}
 /*----Weather Details------*/
 .temp-usp {
   padding: 10px 40px;
@@ -187,6 +199,12 @@ body {
   text-align: center;
 }
 .additional-info ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+  grid-template-rows: repeat(2, auto); 
+  gap: 10px; 
+  padding: 0;
+  list-style: none; 
   list-style-type: none;
 }
 
@@ -213,7 +231,7 @@ body {
 }
 .timeline-icon img {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .timeline-time,
@@ -297,6 +315,6 @@ body {
     }
     #Second-grid-div,.time-line-wrapper{
       min-width:970px;
-      overflow:scroll;
+      /* overflow:scroll; */
     }
   }
