--- a/views/index.ejs
+++ b/views/index.ejs
@@ -130,43 +130,22 @@
               <div class="timeline-icon">
                 <% if (tl[index].weather[0].id == 800) {  if
                 (isBetween7to6) { %>
-                <img
-                  src="/images/weather_icons/clear_sky_800/clear_sun.svg"
-                  alt="Clear sky during daytime"
-                />
+                <img src="/images/weather_icons/clear_sky_800/clear_sun.svg" alt="Clear sky during daytime"/>
                 <% } else { %>
-                <img
-                  src="/images/weather_icons/clear_sky_800/clear_moon.svg"
-                  alt="Clear sky during nighttime"
-                />
+                <img src="/images/weather_icons/clear_sky_800/clear_moon.svg" alt="Clear sky during nighttime"/>
                 <% }  } else if (tl[index].weather[0].id >= 800 &&
                 tl[index].weather[0].id <= 899) {  if (isBetween7to6) { %>
-                <img
-                  src="/images/weather_icons/clouds_80x/cloud_sun.svg"
-                  alt="Cloudy daytime"
-                />
+                <img src="/images/weather_icons/clouds_80x/cloud_sun.svg" alt="Cloudy daytime"/>
                 <% } else { %>
-                <img
-                  src="/images/weather_icons/clouds_80x/cloud_moon.svg"
-                  alt="Cloudy nighttime"
-                />
+                <img src="/images/weather_icons/clouds_80x/cloud_moon.svg" alt="Cloudy nighttime"/>
                 <% }  } else if (tl[index].weather[0].id >= 700 &&
                 tl[index].weather[0].id <= 799) {  if (isBetween7to6) { %>
-                <img
-                  src="/images/weather_icons/mist_7xx/mist.svg"
-                  alt="Misty daytime"
-                />
+                <img src="/images/weather_icons/mist_7xx/mist.svg" alt="Misty daytime" />
                 <% } else { %>
-                <img
-                  src="/images/weather_icons/mist_7xx/mist.svg"
-                  alt="Misty nighttime"
-                />
+                <img src="/images/weather_icons/mist_7xx/mist.svg" alt="Misty nighttime" />
                 <% }  } else if (tl[index].weather[0].id >= 300 &&
                 tl[index].weather[0].id <= 599) { %>
-                <img
-                  src="/images/weather_icons/rain_5xx_3xx/rain.svg"
-                  alt="Rainy weather"
-                />
+                <img src="/images/weather_icons/rain_5xx_3xx/rain.svg" alt="Rainy weather"/>
                 <% } else if (tl[index].weather[0].id >= 600 &&
                 tl[index].weather[0].id <= 699) { %>
                 <img
