--- a/views/index.ejs
+++ b/views/index.ejs
@@ -113,8 +113,8 @@
                   <li class="info-2">Pressure: <br><%= currentPressure %>hPa</li>
                   <li class="info-3">Visibility: <br><%= currentVisibility %>m</li>
                   <li class="info-4">Wind speed: <br><%= currentWindSpeed %>m/s</li>
-                  <li class="info-5">Sunsrise: <br><%= currentSunrise.slice(10, 14) %> am</li>
-                  <li class="info-6">Sunset: <br><%= currentSunset.slice(10, 14) %> pm</li>
+                  <li class="info-5">Sunsrise: <br><%= currentSunrise %></li>
+                  <li class="info-6">Sunset: <br><%= currentSunset %></li>
                 </ul>
               </div>
             </div>
