--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,7 +102,7 @@
                 </description>
               </div>
               <div id="temp-description">
-                <%= currentMaxTemp %> °C/<%= currentMinTemp %> °C, Feels like <%= currentFeelsLike %> °C
+                <%= currentMaxTemp %> °C/<%= currentMinTemp %> °C, <br class="break">Feels like <%= currentFeelsLike %> °C
               </div>
             </div>
             <div class="temp-usp">
