--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,7 +2,7 @@
 /* icons ke container ka size bhi set karna hai */
 
 html, body {
-  height: 100%;
+  height: auto;
   margin: 0;
   padding: 0;
   /* overflow: hidden; */
@@ -122,7 +122,7 @@ body {
   padding: 12px;
   color: black;
   font-size: 26px;
-  display: none;
+  display: none !important;
   position: absolute;
   background-color: #fff;
   border: 1px solid #ccc;
@@ -288,10 +288,9 @@ body {
   flex-direction: row;
   padding: 5px;
 }
-.max-min-degree {
-  /*padding-right: 20px;*/
+.max-min-degree br {
+  display: none;
 }
-
 .weather-desp {
   text-transform: capitalize;
   text-align: center;
@@ -305,9 +304,8 @@ body {
   .time-line{
     padding:10px 10px 10px 15px;
   }
-  #degree-hide{
-    display: none;
-  }
+  #degree-hide{display: none;}
+  .max-min-degree br {display: none;}
 }
 /*---media  query for smaller view -----------*/
 @media screen and (min-width: 1060px) and (max-width: 1460px){ 
@@ -337,18 +335,15 @@ body {
     .time-line{
       padding:10px 10px 10px 15px;
     }
-
     #temp-value{
       font-size: clamp(4.375rem, -1.5875rem + 9vw, 6.625rem);
     }
     #temp-area-name{
       font-size: clamp(1.5625rem, -0.9219rem + 3.75vw, 2.5rem);
     }
-
     #degree-hide{
       display: none;
     }
-
     #Second-grid-div,.time-line-wrapper{
       min-width:970px;
       /* overflow:scroll; */
@@ -356,6 +351,7 @@ body {
     #heading-weather-forecast{
       font-size: xx-large;
     }
+    #usp-li-1{display: none;}
   }
 
 @media screen and (min-width:750px) and (max-width:1060px){
@@ -396,7 +392,6 @@ body {
     flex-direction: row;
     justify-content:space-around;
   }
-
   .time-line-wrapper{
     margin: auto;
   }
@@ -420,4 +415,118 @@ body {
   .day-climate-wrapper{
     font-size: clamp(0.625rem, -0.5847rem + 2.5806vw, 1.125rem);
   }
+  .max-min-degree br { display: none;}
+}
+
+@media screen and (min-width:320px) and (max-width:750px){
+  #navabar-effect{
+  background: none;
+  backdrop-filter: unset;
+  border-radius: unset;
+  border: none;
+  box-shadow: none;
+  padding: 10px;
+  }
+  .navbar-wrapper{
+    height: 80px;
+    gap: 20px;
+  }
+  .logo-wrapper{padding:0px;width:30%; }
+  .logo-wrapper img{
+    margin: 0px;
+    height: 90%;
+  }
+  .search-input{
+    font-size:clamp(0.625rem, 0.1599rem + 2.3256vw, 1.25rem);
+  }
+  .body-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  } 
+  .search-bar-wrapper,.search-input{
+    width: 100%;
+  }
+  .search-bar-wrapper form{
+    width: 80%;
+  }
+  /*main card*/
+  .temp-degree{
+    padding: 0px;
+    display: grid;
+    align-items:end;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+  }
+  .temp-usp-desc{font-size: clamp(0.75rem, 0.3779rem + 1.8605vw, 1.25rem);
+  }
+  .temp-name{font-size: clamp(0.625rem, 0.1875rem + 2vw, 1.125rem);
+  }
+  #temp-icon{font-size: clamp(0.625rem, 0.1875rem + 2vw, 1.125rem);
+  }
+  #temp-icon img{width: 42%;}
+  #temp-description{
+    font-size: clamp(0.625rem, 0.2529rem + 1.8605vw, 1.125rem);
+    align-items: center;
+    grid-row: 2;
+    grid-column: span 2;
+    padding: 10px 30px;
+  }
+  .temp-usp{padding: 0;}
+  #temp-area-name,#temp-value{
+    font-size:30px;}
+  .usp-info{
+    font-size: 11px;
+    padding: 0px 10px;
+  }
+  .additional-info ul{
+    gap: 5px;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(3,1fr);
+  }
+  #usp-li{display: none;}
+  #usp-li-1{display:block;}
+  .max-min-degree br { display: block; }
+  
+  /*5-day-timeline*/
+  #timeline-glass-effect{
+    margin:10px 0px;
+  }
+  .time-line-wrapper{
+    margin: auto;
+  }
+  .time-line{
+    padding:10px;
+    min-width: 80px;
+  }
+  #degree-hide{
+    display: none;
+  }
+  .time-line-wrapper{
+    /* min-width:970px; */
+    overflow-x: scroll;
+  }
+  .time-line-wrapper::-webkit-scrollbar {
+    display: none;
+  }
+  #heading-weather-forecast{
+    padding-left: 40px;
+    font-size: 25px;
+    text-align: center;
+    font-family: 'Dancing Script', cursive;
+    color: #ffffff;
+  }
+  .day-climate-wrapper{
+    font-size: clamp(0.625rem, -0.5847rem + 2.5806vw, 1.125rem);
+    flex-direction: column;
+  }
+  .forecast-card-wrapper{
+    flex-direction: row;
+  }
+  .date,.weather-desp,.degree-wrapper{flex: 1;}
+  #forecast-icon{width: fit-content;
+    flex: 2;
+  }
+
 }
